objects/ssot__HealthcarePractitionerFacility__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssignmentEndDate__c</fullName>
        <label>Assignment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__AssignmentStartDate__c</fullName>
        <label>Assignment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__AvailabilityExceptions__c</fullName>
        <label>Availability Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AvailabilityStatusName__c</fullName>
        <label>Availability Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailAddress__c</fullName>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GenderRestriction__c</fullName>
        <label>Gender Restriction</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Has24x7Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has 24x7 Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityId__c</fullName>
        <label>Healthcare Facility</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareProviderId__c</fullName>
        <label>Healthcare Provider</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HighestValidAge__c</fullName>
        <label>Highest Valid Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Healthcare Practitioner Facility Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InitialStartDate__c</fullName>
        <label>Initial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsDirectoryPrint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Directory Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryCarePhysician__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Care Physician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryFacility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastReferencedDate__c</fullName>
        <label>Last Referenced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LowestValidAge__c</fullName>
        <label>Lowest Valid Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MedicalStatusCategoryName__c</fullName>
        <label>Medical Status Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MobilePhoneNumber__c</fullName>
        <label>Mobile Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PracticeTypeName__c</fullName>
        <label>Practice Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PractitionerId__c</fullName>
        <label>Practitioner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PractitionerObject__c</fullName>
        <label>Practitioner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTerritoryResourceId__c</fullName>
        <label>Service Territoty Resource</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModified__c</fullName>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SsaCountyCode__c</fullName>
        <label>Ssa County Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TerminationDate__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__TerminationReason__c</fullName>
        <label>Termination Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TerminationRequestedById__c</fullName>
        <label>Termination Requested By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718544747417_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcarePractitionerFacility_Pract_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>HealthcarePractitionerFacility_Pract_rel</relationshipLabel>
        <relationshipName>rel_1718544747417_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>